[package]
name = "xkcd_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
reqwest = "0.11.12"
anyhow = "1.0.65"
regex = "1.6.0"
serde_json = "1.0.87"
lazy_static = "1.4.0"
chrono = "0.4.22"
